# KickWithReverb

./: .gitignore  1  CODE_REVIEW_REPORT.md  README.md  authImprovementPlan.md  dontDeleteSharePresetsPlan.md  kickGenImplementationPlan.md  kickGenPlan.md  movePOW.md  mt-convolution-design-plan.md  mt-convolution-plan.md  noMoreToneJs.md  presetsPlan.md
backend/: Procfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/kickgen/: apps.py  german_names.py  views.py
backend/kickgen/migrations/: 0001_initial.py
backend/presets/: apps.py  models.py  serializers.py
backend/presets/migrations/: 0003_rename_phaser_to_volume.py
backend/users/: views.py
django/: db.sqlite3  pyproject.toml  requirements.txt
docs/: backend.md  components.md  connections.md  dsp.md  frontend.md  kickGen.md
dsp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  convolution-mt.cpp  convolution-mt.h  convolution.cpp  convolution_mt.cpp  distortion.cpp  fft.cpp  fft.h  filter.h  limiter.h  ott.cpp  ott.h  sample_player.cpp  sample_player.h  tail_worker.cpp
kick_gen_trainer/: pyproject.toml
kick_gen_trainer/data_preprocessing/: aggregate_raw_data.py  mouse_jigler.txt  reconstruct_mels_via_vae.py
kick_gen_trainer/docs/: handoff.md  modeling_process.md  user_guide.md
kick_gen_trainer/inference/: generate.py
kick_gen_trainer/models/: autoencoder.py  diffusion.py  text_encoder.py  vocoder.py
kick_gen_trainer/scripts/: aggregate_data.py  preprocess.py
kick_gen_trainer/training/: config.py  losses.py  train_autoencoder.py  train_diffusion.py  train_vocoder.py
(+184 files in other folders)
